# kjspkg

./: .env.example  .gitignore  API.md  Cargo.toml  LICENSE  PklProject  PklProject.deps.json  README.md  SECURITY.md  compile_config.ps1  compile_config.sh  config.pkl.example  crowdin.yml  diesel.toml  install_cli.ps1  install_cli.sh  minisign.pub  shuttle_prebuild.sh  shuttle_setup_container.sh  test-package.tgz
.github/: FUNDING.yml
.github/workflows/: cli-build.yml  deploy.yml
apps/astro/: Cargo.toml  README.md
apps/astro-migrator/: .gitignore  Cargo.toml
apps/astro-migrator/src/: main.rs  models.rs
apps/astro/src/: cli.rs  lib.rs  main.rs  models.rs  tags.rs  vers.rs
apps/cli/: Cargo.toml
apps/cli/pkg/: .gitignore  build-all.sh
apps/cli/pkg/apk/: .gitignore  APKBUILD.in  README.md  build.sh  clean.sh  exec-alpine.sh  run-alpine.sh
apps/cli/pkg/aur/: .SRCINFO  .gitignore  PKGBUILD.in  build.sh  clean.sh
apps/cli/pkg/deb/: .gitignore  build.sh  clean.sh  control.in
apps/cli/pkg/deb-ppa/: .gitignore  build.sh  commit.txt  get_source.sh  run_build.sh
apps/cli/pkg/deb-ppa/debian/: changelog  control  copyright  rules
apps/cli/pkg/deb-ppa/debian/source/: options
apps/cli/pkg/rpm/: .gitignore  build.sh  clean.sh  kjspkg-cli.spec.in
apps/cli/src/: cli.rs  ctx.rs  lib.rs  main.rs  manifest.rs  splash.rs  style.rs
apps/cli/src/cmd/: fetch.rs  info.rs  init.rs  install.rs  list.rs  list_remote.rs  login.rs  logout.rs  mod.rs  search.rs  uninit.rs  uninstall.rs  update.rs  update_all.rs
apps/cli/src/cmd/pkg/: init.rs  mod.rs  pack.rs  publish.rs
apps/cli/src/pkg/: install.rs
apps/cli/src/util/: mc.rs  mod.rs  pkg.rs  tar.rs  versions.rs
apps/kjspkg/: Cargo.toml  README.md
apps/kjspkg/src/: main.rs
apps/migrate/: Cargo.toml
apps/migrate/src/: data.rs  lib.rs  logger.rs  main.rs  pkg.rs  util.rs
apps/server/: Cargo.toml  ModHost.toml  build.rs
apps/server/migrations/2024-10-21-003758_initial_setup/: up.sql
apps/server/src/: api.rs  bun.rs  cli.rs  glue.rs  lib.rs  logger.rs  macros.rs  main.rs  redoc.html  schema.rs  server.rs  state.rs  ui.rs  worker.rs
apps/server/src/auth/: mod.rs
apps/server/src/db/: mod.rs  pkg.rs  user.rs  ver.rs
apps/server/src/error/: err.rs
apps/server/src/middleware/logger/: mod.rs
apps/server/src/models/: manifest.rs  pkg.rs  pkg_author.rs  pkg_ver.rs  user.rs
apps/server/src/routes/: api.rs  mod.rs
apps/server/src/routes/auth/: callback.rs  login.rs
apps/server/src/routes/meta/: badge.rs  loaders.rs  mod.rs  tags.rs  vers.rs
apps/server/src/routes/pkg/: author.rs  gallery.rs  info.rs  list.rs  mod.rs  search.rs  ver.rs
apps/server/src/routes/users/: info.rs  me.rs  mod.rs  pkg.rs  search.rs
apps/server/src/util/: gallery.rs  mod.rs  pkg.rs  sanitize.rs  scheme.rs  versions.rs
crates/app-config/: Cargo.toml
crates/app-config/src/: auth.rs  config.rs  db.rs  lib.rs  meili.rs  storage.rs  ui.rs  util.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/app-core/src/error/: err.rs  mod.rs  util.rs
crates/app_core/: Cargo.toml
crates/app_core/src/error/: err.rs
crates/axumite/: Cargo.toml  README.md
crates/db/: Cargo.toml
crates/db/migrations/2024-10-21-003758_initial_setup/: up.sql
crates/db/migrations/2024-10-26-220702_add-token-invalidation/: down.sql  up.sql
crates/db/migrations/2024-11-05-201003_add_downloads_to_packages/: down.sql  up.sql
crates/db/migrations/2024-11-14-212433_fix_updated_at/: down.sql  up.sql
crates/db/migrations/2024-11-24-010026_rename_minecraft/: down.sql  up.sql
crates/db/migrations/2024-12-03-181034_add_license_and_visibility/: down.sql  up.sql
crates/db/migrations/2024-12-03-224731_add_gallery_and_tags/: down.sql  up.sql
crates/db/migrations/2024-12-06-003420_remove-views/: down.sql  up.sql
crates/db/src/: lib.rs  schema.rs
crates/db/src/models/: gallery.rs  manifest.rs  mod.rs  pkg.rs  pkg_author.rs  pkg_relation.rs  pkg_ver.rs  user.rs
crates/db/src/util/: gallery.rs  mod.rs  pagination.rs  pkg.rs  sync.rs  token.rs  user.rs  ver.rs
crates/imghdr/: Cargo.toml
crates/imghdr/src/: lib.rs  patterns.rs
crates/include_dir/: Cargo.toml
crates/include_dir/src/: dir.rs  lib.rs
crates/include_dir_macros/: Cargo.toml
crates/include_dir_macros/src/: lib.rs
crates/jsglue/: Cargo.toml
crates/jsglue/src/: abort.rs  config.rs  embedded.rs  framework.rs  glue.rs  router.rs  runner.rs
crates/kjspkg-api/: Cargo.toml
crates/kjspkg-api/src/: lib.rs
crates/kjspkg-api/src/apis/: common.rs  mod.rs
crates/kjspkg-api/src/apis/pkg/: mod.rs  read.rs  write.rs
crates/kjspkg-api/src/apis/users/: mod.rs
crates/kjspkg-api/src/apis/ver/: read.rs  write.rs
crates/kjspkg-api/src/models/: pkg.rs  ver.rs
crates/modhost-api/: Cargo.toml
crates/parse-wiki-text-2/: Cargo.toml  README.md
crates/parse-wiki-text-2/src/: comment.rs  configuration.rs  default.rs  external_link.rs  heading.rs  lib.rs  link.rs  parse.rs  positioned.rs  redirect.rs  state.rs  table.rs  tag.rs  template.rs  trie.rs  warning.rs
crates/search/: Cargo.toml
crates/search/src/: facets.rs  index.rs  lib.rs  models.rs  search.rs  service.rs  setup.rs
pkl/: ModHost.pkl
scripts/: create-package.sh  create-version.sh
server/: Cargo.toml
server/migrations/2024-10-21-003758_initial_setup/: down.sql  up.sql
server/src/: api.rs  cli.rs  error.rs  glue.rs  lib.rs  logger.rs  schema.rs
server/src/auth/: mod.rs
server/src/db/: mod.rs  pkg.rs
server/src/middleware/logger/: macros.rs
server/src/models/: pkg.rs  pkg_relation.rs  pkg_ver.rs  user.rs
server/src/routes/: api.rs
server/src/routes/auth/: callback.rs  login.rs  mod.rs
server/src/routes/pkg/: author.rs  info.rs  list.rs  ver.rs
server/src/routes/users/: info.rs  mod.rs  pkg.rs
server/src/util/: mod.rs
test-package/: kjspkg.json
ui/: .gitignore  .prettierignore  .prettierrc  README.md  bun.lockb  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
ui/src/: app.d.ts  app.html  app.pcss  hooks.server.ts
ui/vite/: locales.ts  tabler-loader.ts
(+159 files in other folders)
