[workspace]
resolver = "2"
members = ["./apps/*", "./crates/*", "apps/cli", "apps/migrate", "crates/kjspkg-api"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/RedstoneWizard08/kjspkg"
homepage = "https://github.com/RedstoneWizard08/kjspkg"
authors = ["RedstoneWizard08", "tizu69"]
readme = "README.md"

[workspace.dependencies]
anstyle = "1.0.10"
anyhow = "1.0.90"
async-trait = "0.1.82"
axum = { version = "0.7.7", features = ["macros", "multipart", "ws"] }
axum-core = "0.4.3"
axum-extra = { version = "0.9.4", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
bytes = "1.7.2"
cfg-if = "1.0.0"
chrono = { version = "0.4.38", features = ["pure-rust-locales", "serde"] }
clap = { version = "4.5.20", features = ["derive", "color"] }
clap-verbosity-flag = "2.2.2"
colored = "2.1.0"
color-eyre = "0.6.3"
copy_dir = "0.1.3"
ctrlc = "3.4.5"
derive_builder = "0.20.1"
diesel = { version = "2.2.4", features = ["chrono", "postgres", "r2d2"] }
diesel-async = { version = "0.5.0", features = ["tokio", "postgres", "deadpool"] }
diesel_async_migrations = "0.15.0"
dirs = "5.0.1"
dotenvy = "0.15.7"
eyre = "0.6.12"
flate2 = "1.0.34"
futures = "0.3.31"
futures-util = "0.3.31"
git2 = "0.19.0"
glob = "0.3.1"
http = "1.1.0"
http-body-util = "0.1.2"
hyper-util = { version = "0.1.8", features = ["tokio"] }
hyper = { version = "1.4.1", features = ["client"] }
include_dir = "0.7.4"
indexmap = "2.6.0"
indicatif = "0.17.8"
inquire = "0.7.5"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
mime_guess = "2.0.5"
oauth2 = "4.4.2"
octocrab = "0.41.2"
once_cell = "1.19.0"
open = "5.3.0"
openssl-sys = { version = "0.9.100", features = ["vendored"] }
parking_lot = "0.12.3"
portpicker = "0.1.1"
pq-sys = { version = "0.6", features = ["bundled"] }
rand = "0.8.5"
random-string = "1.1.0"
rayon = "1.10.0"
regex = "1.10.6"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls", "multipart", "stream", "blocking"] }
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
sha-1 = "0.10.1"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tar = "0.4.42"
tempfile = "3.13.0"
termsize = "0.1.9"
thiserror = "1.0.64"
tiny_http = "0.12.0"
tokio = { version = "1.40.0", features = ["process", "rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter", "registry"] }
tungstenite = { version = "0.24.0", features = ["rustls"] }
url = "2.5.2"
utoipa = { version = "5.1.1", features = ["axum_extras", "chrono", "yaml"] }
utoipa-rapidoc = { version = "5.0.0", features = ["axum"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
utoipa-swagger-ui = { version = "8.0.2", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4"] }

app_core = { version = "0", path = "./crates/app_core" }
axumite = { version = "0", path = "./crates/axumite" }
db = { version = "0", path = "./crates/db" }
jsglue = { version = "0", path = "./crates/jsglue" }
kjspkg-api = { version = "0", path = "./crates/kjspkg-api" }
