[workspace]
resolver = "2"
members = ["./apps/*", "./crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/RedstoneWizard08/ModHost"
homepage = "https://github.com/RedstoneWizard08/ModHost"
authors = ["RedstoneWizard08"]
readme = "README.md"

[workspace.dependencies]
anstyle = "1.0.10"
anyhow = "1.0.93"
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros", "multipart", "ws"] }
axum-core = "0.4.5"
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
bytes = "1.8.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.38", features = ["pure-rust-locales", "serde"] }
clap = { version = "4.5.21", features = ["derive", "color"] }
clap-verbosity-flag = "3.0.0"
clap_complete = "4.5.38"
colored = "2.1.0"
color-eyre = "0.6.3"
config = "0.15.0"
const_format = "0.2.34"
copy_dir = "0.1.3"
ctrlc = "3.4.5"
derive_builder = "0.20.2"
diesel = { version = "2.2.5", features = ["chrono", "postgres", "r2d2"] }
diesel-async = { version = "0.5.1", features = ["tokio", "postgres", "deadpool"] }
diesel_async_migrations = "0.15.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
eyre = "0.6.12"
flate2 = "1.0.35"
futures = "0.3.31"
futures-util = "0.3.31"
git2 = "0.19.0"
glob = "0.3.1"
http = "1.1.0"
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["tokio"] }
hyper = { version = "1.5.1", features = ["client"] }
ignore = "0.4.23"
indexmap = "2.6.0"
indicatif = "0.17.9"
inquire = "0.7.5"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
lenient_semver = { version = "0.4.2", features = ["version_serde"] }
log = "0.4.22"
meilisearch-sdk = "0.27.1"
mime_guess = "2.0.5"
oauth2 = "4.4.2"
octocrab = "0.42.1"
once_cell = "1.20.2"
open = "5.3.1"
openssl-sys = { version = "0.9.104", features = ["vendored"] }
parking_lot = "0.12.3"
portpicker = "0.1.1"
pq-sys = { version = "0.6.3", features = ["bundled"] }
proc-macro2 = "1.0.92"
quote = "1.0.37"
rand = "0.8.5"
random-string = "1.1.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls", "multipart", "stream", "blocking"] }
ron = "0.8.1"
rust-s3 = "0.35.1"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde-this-or-that = "0.4.2"
serde_yaml = "0.9.34"
serde-xml-rs = "0.6.0"
sha-1 = "0.10.1"
tar = "0.4.43"
tempfile = "3.14.0"
termsize = "0.1.9"
thiserror = "2.0.3"
tiny_http = "0.12.0"
tokio = { version = "1.41.1", features = ["process", "rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.26.0", features = ["rustls"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter", "registry"] }
tungstenite = { version = "0.26.0", features = ["rustls"] }
url = "2.5.2"
utoipa = { version = "5.2.0", features = ["axum_extras", "chrono", "yaml"] }
utoipa-rapidoc = { version = "5.0.0", features = ["axum"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4"] }
zip = "2.2.1"

app-core = { version = "0", path = "./crates/app-core" }
app-config = { version = "0", path = "./crates/app-config" }
axumite = { version = "0", path = "./crates/axumite" }
db = { version = "0", path = "./crates/db" }
imghdr = { version = "0", path = "./crates/imghdr", features = ["serde"] }
include_dir = { version = "0", path = "./crates/include_dir" }
include_dir_macros = { version = "0", path = "./crates/include_dir_macros" }
jsglue = { version = "0", path = "./crates/jsglue" }
modhost = { version = "0", path = "./apps/server" }
modhost-api = { version = "0", path = "./crates/modhost-api" }
parse-wiki-text-2 = { version = "0", path = "./crates/parse-wiki-text-2" }
search = { version = "0", path = "./crates/search" }
