[package]
name = "kjspkg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
axum = { version = "0.7.7", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.9.4", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.38", features = ["pure-rust-locales", "serde"] }
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
diesel = { version = "2.2.4", features = ["chrono", "postgres"] }
diesel-async = { version = "0.5.0", features = ["tokio", "postgres", "deadpool"] }
diesel_async_migrations = "0.15.0"
dotenvy = "0.15.7"
flate2 = "1.0.34"
jsglue = "0.1.0"
lazy_static = "1.5.0"
oauth2 = "4.4.2"
octocrab = "0.41.2"
random-string = "1.1.0"
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tar = "0.4.42"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter", "registry"] }
url = { version = "2.5.2", features = ["serde"] }
utoipa = { version = "5.1.1", features = ["axum_extras", "chrono", "yaml"] }
utoipa-rapidoc = { version = "5.0.0", features = ["axum"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "8.0.2", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4"] }
