[package]
name = "kjspkg"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
colored.workspace = true
copy_dir.workspace = true
dirs.workspace = true
dotenvy.workspace = true
flate2.workspace = true
kjspkg-api.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha-1.workspace = true
tar.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
