[package]
name = "kjspkg"
version = "0.2.3"
description = "An easy-to-use and ergonomic CLI for KJSPKG."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anstyle.workspace = true
chrono.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
colored.workspace = true
color-eyre.workspace = true
copy_dir.workspace = true
dirs.workspace = true
dotenvy.workspace = true
eyre.workspace = true
flate2.workspace = true
indexmap.workspace = true
inquire.workspace = true
itertools.workspace = true
kjspkg-api.workspace = true
log.workspace = true
open.workspace = true
once_cell.workspace = true
portpicker.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha-1.workspace = true
tar.workspace = true
termsize.workspace = true
tiny_http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
