[package]
name = "migrate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
app_core.workspace = true
async-trait.workspace = true
db.workspace = true
diesel.workspace = true
diesel-async.workspace = true
dotenvy.workspace = true
flate2.workspace = true
futures.workspace = true
git2.workspace = true
glob.workspace = true
itertools.workspace = true
octocrab.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tar.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
