[package]
name = "modhost"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
app-core.workspace = true
app-config.workspace = true
axum.workspace = true
axum-core.workspace = true
axum-extra.workspace = true
cfg-if.workspace = true
chrono.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
colored.workspace = true
ctrlc.workspace = true
db.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_async_migrations.workspace = true
dotenvy.workspace = true
flate2.workspace = true
include_dir.workspace = true
jsglue.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
log.workspace = true
oauth2.workspace = true
octocrab.workspace = true
parking_lot.workspace = true
random-string.workspace = true
rayon.workspace = true
reqwest.workspace = true
rust-s3.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha-1.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
utoipa.workspace = true
utoipa-rapidoc.workspace = true
utoipa-redoc.workspace = true
utoipa-scalar.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
zip.workspace = true
