[package]
name = "app-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
app-core.workspace = true
config.workspace = true
oauth2.workspace = true
rust-s3.workspace = true
serde.workspace = true
toml.workspace = true
