[package]
name = "app-core"
version = "0.1.0"
description = "A common core module for ModHost."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
config.workspace = true
diesel.workspace = true
diesel-async.workspace = true
dotenvy.workspace = true
jsglue.workspace = true
octocrab.workspace = true
reqwest.workspace = true
rust-s3.workspace = true
semver.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [] }
toml.workspace = true
url.workspace = true
zip.workspace = true
