[package]
name = "app_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[features]
default = []
shuttle = ["dep:shuttle-runtime"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
diesel.workspace = true
diesel-async.workspace = true
dotenvy.workspace = true
jsglue.workspace = true
octocrab.workspace = true
reqwest.workspace = true
semver.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shuttle-runtime = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = [] }
url.workspace = true
