[package]
name = "imghdr"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors = ["svartalf <self@svartalf.info>", "RedstoneWizard08"]
description = "Library that determines the type of image contained in a file or byte stream."
readme.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
