[package]
name = "kjspkg-api"
version = "0.2.0"
description = "A simple and ergonomic API client for KJSPKG."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt"] }
url.workspace = true
uuid.workspace = true
