[package]
name = "search"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
app-config.workspace = true
app-core.workspace = true
chrono.workspace = true
db.workspace = true
diesel.workspace = true
diesel-async.workspace = true
futures.workspace = true
itertools.workspace = true
meilisearch-sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
